# marp-presentation-creator

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  FULLSTACK.md  PRD.md  README.md  azure.yaml  components.json  docker-compose.yml  plan.md  tasks.md  todo.md
backend/: .dockerignore  .env.example  Dockerfile  config.toml  marp.config.js  mypy.ini  pyproject.toml  startup.sh
backend/app/: main.py
backend/app/core/: cache.py  config.py  constants.py  database.py  logger.py  rate_limiter.py  validators.py
backend/app/models/: __init__.py  analytics.py  asset.py  chat_conversation.py  folder.py  font.py  presentation.py  presentation_version.py  share_link.py  slide_audio.py  template.py  theme.py  video_export.py
backend/app/schemas/: analytics.py  asset.py  batch.py  folder.py  font.py  presentation.py  share.py  template.py  theme.py
backend/app/services/: ai_service.py  analytics_service.py  asset_service.py  chat_service.py  collaboration_service.py  color_extraction_service.py  comment_processor.py  css_generator.py  folder_service.py  font_service.py  marp_service.py  presentation_service.py  presentation_service_file.py  share_service.py  theme_service.py  (+5 more)
backend/scripts/: migrate_add_folders.py
backend/tests/: conftest.py  test_ai_api.py  test_ai_service.py  test_assets_api.py  test_edge_cases.py  test_health.py  test_integration.py  test_layout_transform.py  test_marp_service.py  test_new_features.py  test_presentation_service.py  test_presentations.py  test_theme_crud.py  test_themes.py  test_themes_css.py  test_validators.py  test_video_export_service.py
backend/themes/: academic.css  corporate.css  default.css
cli/: main.py  pyproject.toml
cli/marpify/: api_client.py  config.py  main.py  utils.py
cli/tests/: __init__.py  test_cli_edge_cases.py  test_commands.py  test_config.py  test_utils.py
(+142 files in other folders)
