[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "anthropic>=0.45.0",
    "cachetools>=6.2.4",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "kokoro>=0.9.4",
    "loguru>=0.7.3",
    "numpy>=2.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pip>=24.0",
    "slowapi>=0.1.9",
    "soundfile>=0.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "watchfiles>=0.24.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "types-setuptools>=80.9.0.20251223",
]
