[project]
name = "marpify"
version = "0.1.0"
description = "Marp Presentation Builder CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[project.scripts]
marpify = "marpify.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
